fix: fix popup size on mobile and clean up code

--- a/pages/index.css
+++ b/pages/index.css
@@ -51,6 +51,7 @@
 
 @media screen and (max-width: 768px) {
   .header {
+    min-height: 56px;
     padding-left: 27px;
   }
 }
@@ -63,6 +64,12 @@
   height: 33px;
 }
 
+@media screen and (max-width: 768px) {
+  .logo__image {
+    width: 103.74px;
+    height: 24.4px;
+  }
+}
 .content {
 }
 
@@ -122,9 +129,6 @@
   .profile__info {
     gap: 14px 10px;
     margin: 26px auto 36px;
-    /* grid-template-areas: */
-    /* "name name" */
-    /* "bio bio"; */
   }
 }
 .profile__text {
@@ -145,7 +149,6 @@
 @media screen and (max-width: 768px) {
   .profile__name {
     margin-left: 24px;
-    /* text-align: center; */
     font-size: 27px;
     line-height: 33px;
   }
@@ -203,8 +206,6 @@
   background-color: black;
   margin-left: auto;
   flex-shrink: 3;
-  /* position: absolute; */
-  /* right: 0; */
 }
 
 @media screen and (max-width: 768px) {
@@ -263,15 +264,6 @@
 }
 
 .place__container {
-  /* width: 100%; */
-  /* height: 100%; */
-  /* background-image: url(../images/1_tiny.jpg); */
-  /* background-position: center;
-  background-repeat: no-repeat; */
-  /* object-fit: contain; */
-  /* background-color: white;
-  color: black;
-  border-radius: 10px; */
 }
 
 .place__photo {
@@ -344,6 +336,19 @@
   box-sizing: border-box;
 }
 
+@media screen and (max-width: 1024px) {
+  .popup__container {
+    width: 66%;
+  }
+}
+
+@media screen and (max-width: 568px) {
+  .popup__container {
+    width: 88%;
+    top: 123px;
+    padding: 25px 22px;
+  }
+}
 .popup__close {
   width: 40px;
   height: 40px;
@@ -358,6 +363,14 @@
   background-color: transparent;
 }
 
+@media screen and (max-width: 768px) {
+  .popup__close {
+    right: 0;
+    width: 26px;
+    height: 26px;
+  }
+}
+
 .popup__title {
   margin: 0;
   margin-bottom: 54px;
@@ -366,8 +379,15 @@
   font-weight: 900;
   font-size: 24px;
   line-height: 29px;
-
   color: #000000;
+}
+
+@media screen and (max-width: 768px) {
+  .popup__title {
+    margin-bottom: 75px;
+    font-size: 18px;
+    line-height: 22px;
+  }
 }
 
 .popup__form {
@@ -402,6 +422,15 @@
   padding: 0;
   margin-top: 48px;
   width: 100%;
+}
+
+@media screen and (max-width: 768px) {
+  .popup__save {
+    margin-top: 48px;
+    height: 46px;
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
 
 .popup__save:hover {
